dunst & polkit-kde-agent added

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -48,8 +48,9 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper
+exec-once = waybar & hyprpaper & dunst
 exec-once = wl-paste --watch cliphist store
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -59,6 +60,8 @@ exec-once = wl-paste --watch cliphist store
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+
+env = GTK_THEME,Nord
 
 #####################
 ### LOOK AND FEEL ###
