adding a keybinding to print a selected part of screen

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -242,6 +242,7 @@ bindm = $mainMod, mouse:273, resizewindow
 # Screenshot
 bind = $mainMod SHIFT, p, exec, hyprshot -m output
 bind = $mainMod SHIFT, c, exec, hyprshot -m window
+bind = $mainMod SHIFT, l, exec, hyprshot -m region --clipboard-only
 
 
 ##############################
