--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,6 +1,3 @@
-import = [
-    "~/.config/alacritty/themes/themes/nord.toml"
-]
 
 [window]
 padding = {x=3, y=8}
@@ -10,3 +7,13 @@ blur = true
 [font]
 normal = {family = "Fira Code", style = "Regular"}
 size = 11
+
+[general]
+import = [
+    "~/.config/alacritty/themes/themes/nord.toml"
+]
+
+[keyboard]
+bindings = [
+{key = "m", mods = "Control", chars = "|"}
+]
