adding hyprlock config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -97,10 +97,10 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    #drop_shadow = true
+    #shadow_range = 4
+    #shadow_render_power = 3
+    #col.shadow = rgba(1a1a1aee)
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
@@ -244,6 +244,8 @@ bind = $mainMod SHIFT, p, exec, hyprshot -m output
 bind = $mainMod SHIFT, c, exec, hyprshot -m window
 bind = $mainMod SHIFT, l, exec, hyprshot -m region --clipboard-only
 
+# Lock Screen
+bind = $mainMod, l, exec, hyprlock
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
